frb_example/pure_dart_multi/rust/c_output_path/c_output_2.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Optional {
  int32_t *field0;
  struct wire_uint_8_list *field1;
} wire_SharedComplexEnumInAllBlocks_Optional;
typedef struct wire_float_32_list {
  float *ptr;
  int32_t len;
} wire_float_32_list;
typedef struct wire_SharedComplexEnumInAllBlocks_Buffer {
  struct wire_float_32_list *field0;
} wire_SharedComplexEnumInAllBlocks_Buffer;
typedef struct wire_SharedComplexEnumInAllBlocks_Enums {
  int32_t field0;
} wire_SharedComplexEnumInAllBlocks_Enums;
typedef struct wire_SharedComplexEnumInAllBlocks_BytesArray {
  struct wire_uint_8_list *field0;
} wire_SharedComplexEnumInAllBlocks_BytesArray;
typedef struct wire_SharedStructOnlyForSyncTest {
  struct wire_uint_8_list *name;
  double score;
} wire_SharedStructOnlyForSyncTest;
typedef struct wire_StructOnlyForBlock1 {
  int8_t *id;
  double *num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock1;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_StructOnlyForBlock2 {
  int16_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock2;
typedef struct wire_StructDefinedInBlock2 {
  struct wire_uint_8_list *name;
} wire_StructDefinedInBlock2;
typedef struct wire_EnumDefinedInBlock2_Quit {

} wire_EnumDefinedInBlock2_Quit;
typedef struct wire_EnumDefinedInBlock2_Move {
  int32_t x;
  int32_t y;
} wire_EnumDefinedInBlock2_Move;
typedef struct wire_EnumDefinedInBlock2_Write {
  struct wire_uint_8_list *field0;
} wire_EnumDefinedInBlock2_Write;
typedef struct wire_EnumDefinedInBlock2_ChangeColor {
  int32_t field0;
  int32_t field1;
  int32_t field2;
} wire_EnumDefinedInBlock2_ChangeColor;
typedef union EnumDefinedInBlock2Kind {
  struct wire_EnumDefinedInBlock2_Quit *Quit;
  struct wire_EnumDefinedInBlock2_Move *Move;
  struct wire_EnumDefinedInBlock2_Write *Write;
  struct wire_EnumDefinedInBlock2_ChangeColor *ChangeColor;
} EnumDefinedInBlock2Kind;
typedef struct wire_EnumDefinedInBlock2 {
  int32_t tag;
  union EnumDefinedInBlock2Kind *kind;
} wire_EnumDefinedInBlock2;
typedef struct wire_StructOnlyForBlock3 {
  int64_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock3;